Add reviewers endpoint
First shot

Auditors: atm, jbn, hwha, mib
